Infrastructure/K8s/mcabank-customer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcabank-customer
  labels:
    app: mcabank-customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcabank-customer
  template:
    metadata:
      labels:
        app: mcabank-customer
    spec:
      containers:
        - name: mcabank-customer
          image: rasteiro11/mcabank-customer:20250918231059
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: mcabank-customer-service
  labels:
    app: mcabank-customer
spec:
  type: NodePort
  ports:
    - port: 5002
      targetPort: 5002
  selector:
    app: mcabank-customer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcabank-customer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mcabank-customer.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mcabank-customer-service
                port:
                  number: 5002
